[package]
name = "nucleus"
version = "0.1.0"
edition = "2021"
description = "Extremely lightweight Docker alternative for agents"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# System calls and Linux primitives
nix = { version = "0.29", features = ["process", "signal", "mount", "sched", "user", "hostname"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
walkdir = "2"        # For context directory traversal
which = "6"          # For finding executables on PATH

[target.'cfg(target_os = "linux")'.dependencies]
# Security (Linux-only)
caps = "0.5"         # For capability management
seccompiler = "0.5"  # For seccomp filtering

[dev-dependencies]
# Testing
tempfile = "3"
